# patient-tasks

./: .gitignore  CHANGES.md  README.md  clinic_manager.py  main.py  pyproject.toml  requirements.txt
data/: input_task_1.json  input_task_2.json  input_task_3.json  input_task_4.json
db/: db_tinydb.py
models/: __init__.py  patient_request.py  patient_task.py  task_input.py
services/: abstract_patient_request_service.py  patient_department_request_service.py  patient_request_service.py  task_service.py
tests/: config.py  test_clinic_manager.py  test_clinic_manager_with_departments.py
